<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="date_and_time">Date &amp; time settings</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="collect_diagnostics_title">Collect diagnostics</string>
    <string name="collect_diagnostics_summary">Collect diagnostics data for troubleshooting</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="device_info_default">Unknown</string>
    <string name="header_category_wireless_networks">Wireless and network</string>
    <string name="header_category_device">Device</string>
    <string name="header_category_personal">Personal</string>
    <string name="header_category_system">System</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="sms_over_ims_on">Turn on SMS over IMS</string>
    <string name="sms_over_ims_off">Turn off SMS over IMS</string>
    <string name="ims_reg_required_on">Turn on IMS registration required</string>
    <string name="ims_reg_required_off">Turn off IMS registration required</string>
    <string name="lte_ram_dump_on">Turn on lte ram dump</string>
    <string name="lte_ram_dump_off">Turn off lte ram dump</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="lockscreen_emergency_call">Emergency call</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount SD card</string>
    <string name="sdcard_format">Erase SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">USB storage</string>
    <string name="sdcard_setting_sd">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="location_settings_title">Location services</string>
    <string name="security_passwords_title">Passwords</string>
    <string name="lockpattern_tutorial_cancel_label">Cancel</string>
    <string name="lockpattern_tutorial_continue_label">Next</string>
    <string name="device_admin_title">Device administration</string>
    <string name="manage_device_admin">Device administrators</string>
    <string name="manage_device_admin_summary">View or deactivate device administrators</string>
    <string name="wifi_notify_open_networks">Network notification</string>
    <string name="wifi_notify_open_networks_summary">Notify me when an open network is available</string>
    <string name="wifi_enable_watchdog_service">Avoid poor connections</string>
    <string name="wifi_enable_watchdog_service_summary">"Don't use a Wi-Fi network unless it has a good Internet connection"</string>
    <string name="wifi_setting_sleep_policy_title">Keep Wi-Fi on during sleep</string>
    <string name="wifi_advanced_titlebar">Advanced Wi-Fi</string>
    <string name="wifi_setting_frequency_band_title">Wi-Fi frequency band</string>
    <string name="wifi_setting_frequency_band_summary">Specify the frequency range of operation</string>
    <string name="wifi_advanced_mac_address_title">MAC address</string>
    <string name="wifi_advanced_ip_address_title">IP address</string>
    <string name="testing_wifi_info">Wi-Fi information</string>
    <string name="wifi_api_test">Wi-Fi API</string>
    <string name="wifi_status_test">Wi-Fi status</string>
    <string name="wifi_config_info">Wi-Fi config</string>
    <string name="sim_lock_settings_category">Set up SIM card lock</string>
    <string name="sim_lock_settings_title">SIM card lock</string>
    <string name="apn_edit">Edit access point</string>
    <string name="apn_name">Name</string>
    <string name="apn_apn">APN</string>
    <string name="apn_http_proxy">Proxy</string>
    <string name="apn_http_port">Port</string>
    <string name="apn_user">Username</string>
    <string name="apn_password">Password</string>
    <string name="apn_server">Server</string>
    <string name="apn_mmsc">MMSC</string>
    <string name="apn_mms_proxy">MMS proxy</string>
    <string name="apn_mms_port">MMS port</string>
    <string name="apn_mcc">MCC</string>
    <string name="apn_mnc">MNC</string>
    <string name="apn_auth_type">Authentication type</string>
    <string name="apn_type">APN type</string>
    <string name="apn_protocol">APN protocol</string>
    <string name="carrier_enabled">APN enable/disable</string>
    <string name="carrier_enabled_summaryOn">APN enabled</string>
    <string name="carrier_enabled_summaryOff">APN disabled</string>
    <string name="bearer">Bearer</string>
    <string name="location_network_based">"Google's location service"</string>
    <string name="location_neighborhood_level">Let apps use data from sources such as Wi-Fi and mobile networks to determine your approximate location</string>
    <string name="location_gps">GPS satellites</string>
    <string name="location_street_level">Let apps use GPS to pinpoint your location</string>
    <string name="assisted_gps">Use assisted GPS</string>
    <string name="assisted_gps_enabled">Use server to assist GPS (uncheck to reduce network usage)</string>
    <string name="assisted_gps_disabled">Use server to assist GPS (uncheck to improve GPS performance)</string>
    <string name="location_pdr">Use sensor aiding</string>
    <string name="location_use_pdr">Enhance positioning and save power using sensors</string>
    <string name="lock_title">Securing your phone</string>
    <string name="lock_intro_message">"Protect your phone from unauthorized use by creating a personal screen unlock pattern. Slide your finger to connect at least four dots in any order on the next screen. 

Ready to start? Touch Next."</string>
    <string name="install_applications">Unknown sources</string>
    <string name="install_unknown_applications">Allow installation of non-Market apps</string>
    <string name="show_password">Make passwords visible</string>
    <string name="testing">Testing</string>
    <string name="testing_phone_info">Phone information</string>
    <string name="testing_battery_info">Battery information</string>
    <string name="testing_usage_stats">Usage statistics</string>
    <string name="credentials_title">Credential storage</string>
    <string name="credentials_install">Install from storage</string>
    <string name="credentials_install_summary">Install certificates from storage</string>
    <string name="credentials_reset">Clear credentials</string>
    <string name="credentials_reset_summary">Remove all certificates</string>
    <string name="trusted_credentials">Trusted credentials</string>
    <string name="trusted_credentials_summary">Display trusted CA certificates</string>
    <string name="wifi_setup_skip">Skip</string>
    <string name="wifi_setup_next">Next</string>
    <string name="wifi_setup_back">Back</string>
    <string name="vpn_name">Name</string>
    <string name="vpn_type">Type</string>
    <string name="vpn_server">Server address</string>
    <string name="vpn_mppe">PPP encryption (MPPE)</string>
    <string name="vpn_l2tp_secret">L2TP secret</string>
    <string name="vpn_ipsec_identifier">IPSec identifier</string>
    <string name="vpn_ipsec_secret">IPSec pre-shared key</string>
    <string name="vpn_ipsec_user_cert">IPSec user certificate</string>
    <string name="vpn_ipsec_ca_cert">IPSec CA certificate</string>
    <string name="vpn_show_options">Show advanced options</string>
    <string name="vpn_search_domains">DNS search domains</string>
    <string name="vpn_dns_servers">DNS servers (e.g. 8.8.8.8)</string>
    <string name="vpn_routes">Forwarding routes (e.g. 10.0.0.0/8)</string>
    <string name="vpn_username">Username</string>
    <string name="vpn_password">Password</string>
    <string name="vpn_save_login">Save account information</string>
    <string name="vpn_not_used">(not used)</string>
    <string name="remote_controls_mbody">Remote controls</string>
    <string name="remote_controls_message">Resister Samsung account, Google account, and Consent location</string>
    <string name="account_registration">Account registration</string>
    <string name="location_consent">Location Consent</string>
    <string name="iwlan">I-WLAN</string>
    <string name="iwlan_network">I-WLAN Network</string>
    <string name="iwlan_add_network">Add I-WLAN network</string>
    <string name="iwlan_ready">I-WLAN READY...</string>
    <string name="onehand_settings_title">One-handed operation</string>
    <string name="onehand_activate_category">Enable one-handed operation</string>
    <string name="onehand_activate_dialer_title">Dialer</string>
    <string name="onehand_activate_dialer_summary">Enable to adjust the position of dialing keypad left or right for use with one hand</string>
    <string name="onehand_activate_samsung_keypad_title">Samsung Keypad</string>
    <string name="onehand_activate_samsung_keypad_summary">Enable to adjust the position of Samsung keypad left or right for use with one hand</string>
    <string name="onehand_activate_calculator_title">Calculator</string>
    <string name="onehand_activate_calculator_summary">Enable to adjust the position of Samsung calculator keypad left or right for use with one hand</string>
    <string name="onehand_activate_pattern_title">Pattern</string>
    <string name="onehand_activate_pattern_summary">Enable to adjust the position of Pattern left or right, for use with one hand</string>
    <string name="onehand_tutorial_category">Tutorial</string>
    <string name="onehand_tutorial_help_title">Learn about one-handed operation</string>
    <string name="mwlan_permission_title_2">Wi-Fi secure connection</string>
    <string name="mwlan_permission_summary_2">Enable the secure connection for the service requiring payments</string>
</resources>