<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/location_settings_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/location_network_based" android:key="location_network" android:summary="@string/location_neighborhood_level" />
    <CheckBoxPreference android:title="@string/location_gps" android:key="location_gps" android:summary="@string/location_street_level" />
    <CheckBoxPreference android:title="@string/assisted_gps" android:key="assisted_gps" android:summaryOn="@string/assisted_gps_enabled" android:summaryOff="@string/assisted_gps_disabled" />
    <CheckBoxPreference android:title="@string/location_pdr" android:key="location_pdr" android:dependency="location_gps" android:summaryOn="@string/location_use_pdr" android:summaryOff="@string/location_use_pdr" />
</PreferenceScreen>
