<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/onehand_settings_title" android:key="onehand_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <PreferenceCategory android:title="@string/onehand_activate_category" android:key="category_onehand_operation" />
    <CheckBoxPreference android:title="@string/onehand_activate_dialer_title" android:key="dialer" android:summary="@string/onehand_activate_dialer_summary" />
    <CheckBoxPreference android:title="@string/onehand_activate_samsung_keypad_title" android:key="samsung_keypad" android:summary="@string/onehand_activate_samsung_keypad_summary" />
    <CheckBoxPreference android:title="@string/onehand_activate_calculator_title" android:key="calculator" android:summary="@string/onehand_activate_calculator_summary" />
    <CheckBoxPreference android:title="@string/onehand_activate_pattern_title" android:key="pattern" android:summary="@string/onehand_activate_pattern_summary" />
    <PreferenceCategory android:title="@string/onehand_tutorial_category" android:key="category_tutorial" />
    <PreferenceScreen android:title="@string/onehand_tutorial_help_title" android:key="onehand_help">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.OneHandHelp" />
    </PreferenceScreen>
</PreferenceScreen>
