<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/testing"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/testing_phone_info">
        <intent android:targetPackage="com.android.OriginalSettings" android:action="android.intent.action.MAIN" android:targetClass="com.android.OriginalSettings.RadioInfo" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/testing_battery_info">
        <intent android:targetPackage="com.android.OriginalSettings" android:action="android.intent.action.MAIN" android:targetClass="com.android.OriginalSettings.BatteryInfo" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/testing_usage_stats">
        <intent android:targetPackage="com.android.OriginalSettings" android:action="android.intent.action.MAIN" android:targetClass="com.android.OriginalSettings.UsageStats" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/testing_wifi_info">
        <intent android:targetPackage="com.android.OriginalSettings" android:action="android.intent.action.MAIN" android:targetClass="com.android.OriginalSettings.wifi.WifiInfo" />
    </PreferenceScreen>
</PreferenceScreen>
