<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:gravity="center_horizontal" android:paddingBottom="10.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lock_title" style="?android:attr/textAppearanceLarge" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lock_intro_message" />
            <com.android.internal.widget.LockPatternView android:layout_gravity="left" android:id="@id/lockPattern" android:layout_width="200.0dip" android:layout_height="200.0dip" android:layout_marginTop="10.0dip" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" style="@style/SecurityPreferenceButtonContainer">
        <Button android:id="@id/skip_button" android:text="@string/lockpattern_tutorial_cancel_label" style="@style/SecurityPreferenceButton" />
        <Button android:id="@id/next_button" android:text="@string/lockpattern_tutorial_continue_label" style="@style/SecurityPreferenceButton" />
    </LinearLayout>
</LinearLayout>
